fix: replace unnamed variable _ with ignored2 — Java 21 requires --enable-preview for _